@@ -172,7 +172,7 @@ FitsOutput::create_fits_header (void)
         std::vector<std::string> values;
         if (keyname == "Comment" || keyname == "History" || keyname == "Hierarch") {
             pystring::split (value, values, m_sep);
-            for (int i = 0; i < values.size(); ++i)
+            for (size_t i = 0; i < values.size(); ++i)
                 header += create_card (keyname, values[i]);
             continue;
         }
